<resources>
    <string name="app_name">HyperventilationSyndrome</string>
    <string name="target">Target</string>
    <string name="star">star</string>
    <string name="age">Age : </string>
    <string name="sex">Sex : </string>
    <string name="diagnose">Diagnose : </string>
    <string name="icon_app_title">iconapp</string>
    <string name="name">Name</string>
    <string name="example_20">example : 20</string>
    <string name="example_swu_cpe">example : SWU CPE</string>
    <string name="confirm">Confirm</string>
    <string name="normal">Normal</string>
    <string name="ignore">Ignore</string>
    <string name="breathing">Breathing</string>
    <string name="error">Error</string>
    <string name="type_again">Type again</string>
    <string name="training">Training</string>

    <string-array name="sex">
        <item>Select Sec</item>
        <item>Man</item>
        <item>Woman</item>
        <item>other</item>
    </string-array>
</resources>