<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="30dp"
    tools:context=".register.RegisterActivity">


    <ImageView
        android:layout_marginTop="100dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon"
        android:contentDescription="@string/icon_app_title" />

    <LinearLayout
        android:layout_marginTop="25dp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textColor="@color/black"
            android:hint="@string/example_swu_cpe"
            android:textSize="16sp"
            android:paddingStart="10dp"
            android:autofillHints="name"
            android:inputType="text"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Age"/>

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textColor="@color/black"
            android:hint="@string/example_20"
            android:textSize="16sp"
            android:paddingStart="10dp"
            android:autofillHints="age"
            android:inputType="number"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Sex"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_height="48dp"
            android:textColor="@color/black"
            android:hint="@string/example_20"
            android:layout_width="match_parent"/>


        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:text="@string/confirm"
            android:layout_height="wrap_content">

        </Button>

    </LinearLayout>
</LinearLayout>