<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".profile.ProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="#5226FF"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/target"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dateProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="7/15"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/star"
                    android:src="@drawable/star"
                    android:visibility="invisible" />


                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/star"
                    android:src="@drawable/star"
                    android:visibility="invisible" />


                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/star"
                    android:src="@drawable/star"
                    android:visibility="invisible" />


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/profile_shape"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="profile"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/train"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:text="@string/training" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="demo to question"
        android:layout_marginTop="150dp"
        android:id="@+id/demo"/>

</LinearLayout>